--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/styles.css"/>
 </head>
-    
     <body>
         <header class="header">
         <div class="header-containers">
@@ -50,7 +49,7 @@
             <section class="section-hero">
                 <div class="section-hero-containers">
                 <h1 class="section-hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-                <button type="button" class="section-hero-btn">Заказать услугу</button>
+                <button type="button" class="section-hero-btn" data-modal-open>Заказать услугу</button>
                 </div>
             </section>
             <section class="section-criteria">
