--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
                 <li class="footers-social-item">
                     <a href="" class="footer-social-link">
                         <svg class="footer-social-icon" width="20" height="20">
-                            <use href="./images/iccons.svg#icon-icon-instagram-g1">
+                            <use href="./images/icons.svg#icon-icon-instagram-g1">
                             </use>
                         </svg>
                     </a>
@@ -169,7 +169,7 @@
                 <li class="footers-social-item">
                     <a href="" class="footer-social-link">
                         <svg class="footer-social-icon" width="20" height="20">
-                            <use href="./images/iccons.svg#icon-icon-twitter-g1">
+                            <use href="./images/icons.svg#icon-icon-twitter-g1">
                             </use>
                         </svg>
                     </a>
@@ -177,7 +177,7 @@
                 <li class="footers-social-item">
                     <a href="" class="footer-social-link">
                         <svg class="master-social-icon" width="20" height="20">
-                            <use href="./images/iccons.svg#icon-icon-facebook-g1">
+                            <use href="./images/icons.svg#icon-icon-facebook-g1">
                             </use>
                         </svg>
                     </a>
@@ -185,7 +185,7 @@
                 <li class="footers-social-item">
                     <a href="" class="footer-social-link">
                         <svg class="footer-social-icon" width="20" height="20">
-                            <use href="./images/iccons.svg#icon-icon-linkedin-g1">
+                            <use href="./images/icons.svg#icon-icon-linkedin-g1">
                             </use>
                         </svg>
                     </a>
@@ -194,7 +194,7 @@
             </div>
         </div>
     </footer>
-    
+
 </body>
 </html>
 
