--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <li class="header-point">
                     <a href="mailto:info@devstudio.com" class="header-link-contakt">
                         <svg class="header-acon iconhw">
-                            <use href="./images/iccons.svg#icon-envelope-g2">
+                            <use href="./images/icons.svg#icon-envelope-g2">
                             </use>
                         </svg>
                         info@devstudio.com
@@ -35,7 +35,7 @@
                 <li class="header-point indent">
                     <a href="tel:+380961111111" class="header-link-contakt">
                         <svg class="header-acon iconhwtwo">
-                            <use href="./images/iccons.svg#icon-smartphone-g2">
+                            <use href="./images/icons.svg#icon-smartphone-g2">
                             </use>
                         </svg>
                         +38 096 111 11 11
