--- a/index.html
+++ b/index.html
@@ -107,17 +107,19 @@
                 </div>    
             </section>
             <section class="section-work">
-                <div class="section-work-containers">
                 <h2 class="section-work-zag">Чем мы занимаемся</h2>
                 <ul class="section-work-feature-list">
                     <li class="section-work-point">
-                        <img src="./images/img/img1.jpg" alt="написание кода" width="370" height="294">
+                            <img src="./images/img/img1.jpg" alt="написание кода" width="370" height="294">
+                            <p class="section-work-title-img">Десктопные приложения</p>
                     </li>
                     <li class="section-work-point">
-                        <img src="./images/img/img2.jpg" alt="оформление проекта" width="370" height="294">
+                            <img src="./images/img/img2.jpg" alt="оформление проекта" width="370" height="294">
+                            <p class="section-work-title-img">Мобильные приложения</p>
                     </li>
                     <li class="section-work-point">
-                        <img src="./images/img/img3.jpg" alt="цветовая палитра" width="370" height="294">
+                            <img src="./images/img/img3.jpg" alt="цветовая палитра" width="370" height="294">
+                            <p class="section-work-title-img">Дизайнерские решения</p>
                     </li>
                 </ul>
                 </div>
